updating design for all

--- a/backend/students/templates/add_student.html
+++ b/backend/students/templates/add_student.html
@@ -2,14 +2,38 @@
 {% load static %}
 
 {% block title %}Add Student{% endblock %}
-{% block header_title %}Add New Student{% endblock %}
+{% block header_title %}{% endblock %}
 
 {% block content %}
-  <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-  </form>
+  <div class="form-card">
+    <h1>Add New Student</h1>
 
-  {{ form.media }}   {# Flatpickr CSS & JS #}
+    <form method="POST" enctype="multipart/form-data" class="grid-2" novalidate>
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+
+      <label>Student&nbsp;ID: {{ form.student_id }}</label>
+      <label>First&nbsp;name: {{ form.first_name }}</label>
+      <label>Last&nbsp;name: {{ form.last_name }}</label>
+      <label>Gender: {{ form.gender }}</label>
+      <label>Date&nbsp;of&nbsp;Birth: {{ form.date_of_birth }}</label>
+      <label>Nationality: {{ form.nationality }}</label>
+
+      <label class="grid-span-2">Address: {{ form.address }}</label>
+
+      <label>Phone: {{ form.phone }}</label>
+      <label>Email: {{ form.email }}</label>
+      <label>Guardian&nbsp;name: {{ form.guardian_name }}</label>
+      <label>Guardian&nbsp;phone: {{ form.guardian_phone }}</label>
+      <label>Class&nbsp;level: {{ form.class_level }}</label>
+      <label>Enrol&nbsp;date: {{ form.enrol_date }}</label>
+      <label>Status: {{ form.status }}</label>
+
+      <label class="grid-span-2">Photo&nbsp;(jpg/png ≤ 2 MB): {{ form.photo }}</label>
+
+      <button class="btn-primary grid-span-2">Save</button>
+    </form>
+
+    {{ form.media }}   {# Flatpickr assets #}
+  </div>
 {% endblock %}
