--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -27,7 +27,7 @@
     </form>
 
     <p class="mt-3 text-center" style="font-size:.85rem;">
-      Don’t have an account? <span class="text-link">Sign up</span>
+      Don’t have an account? <span class="text-link">Contact the admin</span>
     </p>
   </div>
 {% endblock %}
