--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -22,6 +22,8 @@
                 <li><a href="#" class="tab-link" onclick="showSection('admin')">Espace Admin</a></li>
                 <li><a href="#" class="tab-link" onclick="showSection('professeur')">Espace Professeur</a></li>
                 <li><a href="{% url 'academics:class_list' %}">Classes</a></li>
+                <li><a href="{% url 'academics:subject_list' %}">Matières / Cours</a></li>
+
                 <li><a href="#" class="tab-link" onclick="showSection('eleve')">Espace Élève</a></li>
                 <li><a href="#" class="tab-link" onclick="showSection('parent')">Espace Parent</a></li>
                 <li><a href="#" class="tab-link" onclick="showSection('general')">Fonctionnalités Générales</a></li>
