--- a/backend/academics/templates/subject_list.html
+++ b/backend/academics/templates/subject_list.html
@@ -12,7 +12,7 @@
          placeholder="Search subject…"
          value="{{ request.GET.q|default_if_none:'' }}">
   <select name="class">
-      <option value="">All classes</option>
+      <option value="">All subject</option>
       {% for c in class_choices %}
         <option value="{{ c.id }}"
                 {% if c.id|stringformat:"s" == request.GET.class %}selected{% endif %}>
